Use PresShell::UnsuppressPainting instead of just an invalidate, to make sure the content area receives focus if needed.  Bug 295931, r+sr=dbaron, a=brendan.